--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@
   --light-green: #e4e6c3;
   --partial-white: #f7f7f2;
   --font-base: 'Plus Jakarta Sans';
+  --title-size: 1.8em;
+  --subtitle-size: 1em;
+  --paragraph-size: 1.3em;
 
 }
 
@@ -32,14 +35,14 @@
 }
 
 .cursor-dot {
-  width: 8px;
-  height: 8px;
+  width: 0.8em;
+  height: 0.8em;
   background-color: var(--medium-green);
 }
 
 .cursor-dot-outline {
-  width: 40px;
-  height: 40px;
+  width: 3em;
+  height: 3em;
   background-color: var(--dark-green);
 }
 
@@ -258,19 +261,19 @@
   justify-content: center;
   align-items: center;
   font-family: var(--font-base);
-  font-size: 5vh;
+  font-size: var(--title-size);
   padding-top: 20vh;
 }
 
 .service-title {
   font-weight: 300;
   position: relative;
-  font-size: 5vh;
+  font-size: var(--title-size);
   color: #252839;
 }
 
 .services {
-  height: 70vh;
+  height: 80vh;
   background-color: var(--partial-white);
   display: flex;
   flex-direction: row;
@@ -297,7 +300,7 @@
   flex-direction: column;
   text-align: center;
   padding: 2em;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 1em;
   font-family: var(--font-base);
@@ -310,6 +313,11 @@
 
 .textbox-paragraph {
   width: 75%;
+  font-size: var(--paragraph-size);
+}
+
+.textbox-title{
+  font-size: 1.5em;
 }
 
 .ex-button {
@@ -332,7 +340,7 @@
   align-items: center;
   padding: 3em 0em 0em 0em;
   font-family: var(--font-base);
-  font-size: 5vh;
+  font-size: var(--title-size);
 
 }
 
@@ -343,6 +351,7 @@
     flex-direction: column;
     align-items: center;
     height: 80vh;
+    margin-bottom: 5em;
 }
 
 .carousel > * {
@@ -393,6 +402,7 @@
     cursor: pointer;
     color: var(--dark-green);
     background: none;
+    font-size: 2em;
     border: 1px solid var(--medium-green);
     border-radius: 0.5em;
     background-color: var(--full-black);
@@ -422,7 +432,8 @@
 
 #portafolio-titulo {
   font-weight: 300;
-  font-size: 5vh;
+  font-size: var(--title-size);
+
 }
 
 #contacto{
@@ -433,6 +444,11 @@
   height: 80vh;
   overflow: visible;
   background-color: var(--dark-green);
+  padding: 5em 0;
+}
+
+#contacto-titulo{
+  font-size: var(--title-size);
 }
 
 #contacto h2{
@@ -442,7 +458,9 @@
 
 }
 
+.textbox-paragraph{
 
+}
 
 .contact-title{
   display: flex;
@@ -457,21 +475,24 @@
 .contact-contain{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   width: 80%;
+  align-items: center;
 }
 
 .contact-form{
   display: flex;
   flex-direction: column;
   gap: 0.5em;
-  width: 50%;
+  width: 80%;
+  max-width: 800px;
   color: var(--partial-white);
   background-color: var(--medium-green);
   padding: 2em;
   border-radius: 2em;
   font-family: var(--font-base);
-  font-size: 1.3em;
+  font-size: 1.6em;
+  justify-content: center;
 }
 
 input[type="text"] {
@@ -480,6 +501,7 @@ input[type="text"] {
   border-radius: 5px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   transition: border-color 0.3s ease-in-out;
+  font-size: 0.8em;
 }
 
 input[type="text"]:focus {
@@ -650,6 +672,10 @@ button[type="submit"]:hover{
   font-size: 2em;
 }
 
+.typed-cursor{
+  font-size: var(--title-size);
+}
+
 
 @-webkit-keyframes bubble-size {
   0%, 75% {
@@ -694,6 +720,10 @@ button[type="submit"]:hover{
 @media (max-width: 1000px) {
   .navicon-container {
     display: flex;
+  }
+
+  .carousel nav button {
+    font-size: 1em;
   }
 
   .navbar{
@@ -785,8 +815,9 @@ button[type="submit"]:hover{
 .portafolios-titulo{
   padding: 1em 0em 1em 0em;
   background-color: var(--light-green);
-
+  font-size: var(--title-size);
 }
+
 
 .photos{
   display: flex;
@@ -799,7 +830,8 @@ button[type="submit"]:hover{
 }
 
 #contacto{
-  height: 110vh;
+  height: auto;
+  padding: 5em 0;
 }
 
 .contact-contain{
@@ -817,6 +849,7 @@ button[type="submit"]:hover{
 .carousel{
   perspective: 15em;
   height: 50vh;
+  margin-bottom: 5em;
 }
 
 .carousel figure{
@@ -837,6 +870,10 @@ button[type="submit"]:hover{
 @media (max-width: 1300px){
   .navicon-container {
     display: flex;
+  }
+
+  .carousel nav button {
+    font-size: 1em;
   }
 
   .navbar{
@@ -864,6 +901,11 @@ button[type="submit"]:hover{
 
   .menu {
     display: none;
+  }
+
+  #contacto{
+    height: auto;
+    padding: 5em 0;
   }
 
   .about-text{
