--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: var(--medium-green);
   align-items: center;
   z-index: 80;
@@ -121,7 +121,8 @@
   flex-direction: row;
   list-style: none;
   justify-content: space-between;
-  width: 50%;
+  width: 60%;
+  height: 6em;
 }
 
 .menu a {
@@ -130,7 +131,7 @@
   font-family: var(--font-base);
   font-weight: 200;
   transition: all 0.3s ease-in;
-  font-size: 1.2vw;
+  font-size: 1.5em;
 }
 
 .menu li>a:hover {
@@ -149,9 +150,10 @@
 
 .logo{
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  width: 50%;
+  width: 40%;
+  padding: 0.5em 0em 0.5em 1em;
   z-index: 99;
 }
 
@@ -458,7 +460,7 @@
 #contacto h2{
   color: var(--partial-white);
   font-family: var(--font-base);
-  
+  margin: 1em 0 1em 0;
 
 }
 
@@ -506,6 +508,34 @@ input[type="text"] {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   transition: border-color 0.3s ease-in-out;
   font-size: 0.8em;
+  height: 0.5em;
+}
+
+
+::placeholder {
+  color: var(--dark-green);
+  opacity: 1; /* Firefox */
+  font-family: var(--font-base);
+  font-size: 0.8em;
+}
+
+::-ms-input-placeholder { /* Edge 12 -18 */
+  color: var(--dark-green);
+  font-family: var(--font-base);
+  font-size: 0.8em;
+}
+
+textarea{
+  height: 10em;
+  resize: none;
+}
+
+textarea::placeholder{
+  color: var(--dark-green);
+  font-family: var(--font-base);
+  opacity: 1; /* Firefox */
+  font-size: 1.2em;
+  padding: 1em;
 }
 
 input[type="text"]:focus {
