--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: var(--medium-green);
+  background-color: var(--dark-green);
   align-items: center;
   z-index: 80;
 }
@@ -122,7 +122,7 @@
   list-style: none;
   justify-content: space-between;
   width: 60%;
-  height: 6em;
+  height: 5em;
 }
 
 .menu a {
@@ -153,7 +153,7 @@
   justify-content: left;
   align-items: center;
   width: 40%;
-  padding: 0.5em 0em 0.5em 1em;
+  padding: 2px 0em 2px 1em;
   z-index: 99;
 }
 
@@ -162,9 +162,14 @@
 }
 
 .active {
-  background-color: var(--dark-green);
-  color: white;
+  background-color: var(--light-green);
+  color: var(--dark-green);
 }
+
+.active a{
+  color: var(--dark-green);
+}
+
 
 .active a:hover {
   color: #e4e6c3;
